# certusquartz.com

./: .gitignore  Cargo.toml  CertusQuartz.blend  Dockerfile  Justfile  README.md  package.json  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/workflows/: docker-publish.yml
game/: Cargo.toml
game/assets/: CertusQuartz.gltf
game/src/: app.rs  lib.rs  main.rs
game/src/systems/: init.rs  mod.rs
game/src/systems/gameplay/: certus_quartz.rs  mod.rs
web/: .dockerignore  index.html  package.json
web/src/: App.tsx  Game.tsx  game.ts  index.css
web/src/components/: Button.tsx
